labs/lab01-contenerizar/hello-api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
  labels:
    app: hello-api
spec:
  selector:
    app: hello-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
