labs/lab01-contenerizar/hello-api/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-api
spec:
  to:
    kind: Service
    name: hello-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
